--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
